--- a/tablas.html
+++ b/tablas.html
@@ -3,53 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=tab, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tablas</title>
 </head>
 
 <body>
-    <header id="top">
+
+    <header>
         <nav>
-        <ul>
-            <li>                   
-                 <a href="index.html" target="_self">HOME</a>
-            </li>
-            <li>
-                <a href="paginas/contacto.html" target="_blank">Contacto</a>
-            </li>
-        </ul>
+            <h1>Pagina web de html</h1>
+            <ul>
+                <li><a href="texto.html">TEXTO</a></li>
+                <li><a href="tablas.html">TABLAS</a></li>
+                <li><a href="imagenes.html">IMAGENES</a></li>
+            </ul>
         </nav>
     </header>
-    <a href="#p1">Parrafo 1</a>|
-    <a href="#p2">Parrafo 2</a>
+
     <div class="Table-1">
         <table>
-            <caption>Table</caption>
+            <caption>Tabla de cuidado para perros</caption>
             <thead>
                 <tr>        
-                    <th rowspan="2" colspan="1">A</th>
-                    <th rowspan="1" colspan="3">B</th>
+                    <th rowspan="2" colspan="1">Actividad</th>
+                    <th rowspan="1" colspan="3">Horarios</th>
                 </tr>
                 <tr>        
-                    <th rowspan="1" colspan="1">C</th>
-                    <th rowspan="1" colspan="1">D</th>
-                    <th rowspan="1" colspan="1">E</th>
+                    <th rowspan="1" colspan="1">Mañana</th>
+                    <th rowspan="1" colspan="1">Tarde</th>
+                    <th rowspan="1" colspan="1">Noche</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
-                    <td>Dato1</td>
-                    <td>Dato2</td>
-                    <td>Dato3</td>
-                    <td>Dato4</td>
-
+                    <td>Paseo</td>
+                    <td>7am - 9am</td>
+                    <td>1pm - 3pm</td>
+                    <td>7pm - 9pm</td>
                 </tr>
                 <tr>
-                    <td>Dato1.1</td>
-                    <td>Dato2.1</td>
-                    <td>Dato3.1</td>
-                    <td>Dato4.1</td>
-
+                    <td>Alimentación</td>
+                    <td>8am</td>
+                    <td>6pm</td>
+                    <td>9pm</td>
                 </tr>
             </tbody>
 
@@ -61,54 +57,197 @@
 
     <div class ="segunda">
         <table>
-            <caption>Table2</caption>
+            <caption>Tabla de cuidado adicional para perros</caption>
                 <thead>
                     <tr>        
-                        <th rowspan="1" colspan="3">A</th>
-                        <th rowspan="1" colspan="3">E</th>
+                        <th rowspan="1" colspan="3">Actividad</th>
+                        <th rowspan="1" colspan="3">Detalles</th>
+                        <th rowspan="1" colspan="1">Dia</th>
                     </tr>
                 </thead>
                 <thead>
                     <tr>        
-                        <th rowspan="1" colspan="1">B</th>
-                        <th rowspan="1" colspan="1">C</th>
-                        <th rowspan="1" colspan="1">D</th>
-                        <th rowspan="1" colspan="1">F</th>
-                        <th rowspan="1" colspan="1">G</th>
-                        <th rowspan="1" colspan="1">H</th>
+                        <th rowspan="1" colspan="1">Actividad1</th>
+                        <th rowspan="1" colspan="1">Actividad2</th>
+                        <th rowspan="1" colspan="1">Actividad3</th>
+                        <th rowspan="1" colspan="1">Detalles1</th>
+                        <th rowspan="1" colspan="1">Detalles2</th>
+                        <th rowspan="1" colspan="1">Detalles3</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
-                        <td>5</td>
-                        <td>6</td>
+                        <td>Juego</td>
+                        <td>Entrenamiento</td>
+                        <td>Baño</td>
+                        <td>30 minutos</td>
+                        <td>15 minutos</td>
+                        <td>Cada 2 semanas</td>
+                        <td>Martes</td>
                     </tr>
                     <tr>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
-                        <td>11</td>
-                        <td>12</td>
-    
+                        <td>Cepillado</td>
+                        <td>Descanso</td>
+                        <td>Premios</td>
+                        <td>15 minutos</td>
+                        <td>1 hora</td>
+                        <td>Varía según comportamiento</td>
+                        <td>Jueves</td>
                     </tr>
                 </tbody>
         </table>
     </div>
 
-    <h2 id="p1">Parrafo 1</h2>
-    <a href="#top">TOP</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!</p>
-    <h2 id="p2">Parrafo 2</h2>
-    <a href="#top">TOP</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni laudantium distinctio alias dolor, minima voluptas odio adipisci rerum nobis cum corrupti sunt officia repellendus voluptatibus fuga. Aut ad iste ex? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique corporis libero, iste animi, sint dolore doloribus dolores rem neque incidunt consequatur debitis. Illum ullam asperiores delectus rerum sunt nobis odit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolores culpa numquam nulla eveniet tempora dolorem, repellat, incidunt reiciendis qui aperiam ullam, dignissimos odio ipsam ratione esse tenetur rerum praesentium!</p>
-    <img src="./img/pexels-efrem-efre-16610858.jpg" alt="sendero">
+    <h2 id="p1">Recomendación 1</h2>
+    <p>El cuidado adecuado de los perros es esencial para su salud y felicidad. Esto incluye proporcionarles una dieta equilibrada, ejercicio regular y atención médica adecuada.</p>
+    <h2 id="p2">Recomendación 2</h2>
+    <p>Además de las necesidades básicas, los perros también necesitan estimulación mental y socialización para mantenerse felices y saludables. Esto puede incluir juegos interactivos, entrenamiento de obediencia y paseos regulares.</p>
 
 
+<table>
+  <caption>Tabla de las distintas nacionalidades de los perros</caption>
+  <thead>
+    <tr>        
+        <th rowspan="1" colspan="2">Nacionalidades y Raza</th>
+    </tr>
+</thead>
+  <thead>
+    <tr>
+      <th rowspan="1" colspan="1">Nacionalidad</th>
+      <th rowspan="1" colspan="1">Raza de Perro</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Alemania</td>
+      <td>Pastor Alemán</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Doberman</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Rottweiler</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Schnauzer</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Gran Danés</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Teckel (Dachshund)</td>
+    </tr>
+    <tr>
+      <td>Estados Unidos</td>
+      <td>Pastor Australiano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Pitbull</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Bulldog Americano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Boston Terrier</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Cocker Spaniel Americano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Pointer</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Husky Siberiano</td>
+    </tr>
+    <tr>
+      <td>Reino Unido</td>
+      <td>Bulldog Inglés</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Beagle</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Bull Terrier</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Border Collie</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Corgi Galés Pembroke</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Setter Inglés</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Terrier Escocés</td>
+    </tr>
+    <tr>
+      <td>Francia</td>
+      <td>Caniche</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Bulldog Francés</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Basset Hound</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Dogo de Burdeos</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Gran Basset Grifón Vendeano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Pastor de Brie</td>
+    </tr>
+    <tr>
+      <td>Italia</td>
+      <td>Mastín Napolitano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Braco Italiano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Spinone Italiano</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Lagotto Romagnolo</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Cane Corso</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Italiano Spinone</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
