--- a/texto.html
+++ b/texto.html
@@ -1,118 +1,37 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="encabezados">
-    <h1>Encabezado 1</h1>
-    <h2>Encabezado 1</h2>
-    <h3>Encabezado 1</h3>
-    <h4>Encabezado 1</h4>
-    <h5>Encabezado 1</h5>
-    <h6>Encabezado 1</h6>
-    </div>
-    <h1>Titulo</h1>
-    <h2>Subtitulo</h2>
-    <div class="parrafos">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium quasi iure obcaecati saepe, accusamus blanditiis necessitatibus, possimus fugit magnam eveniet sit rerum repellendus ut enim nihil dolor at delectus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus iusto nesciunt eum error, sint facere! Maxime et ullam quia numquam illum dolor quasi dicta excepturi quidem porro. Optio, perferendis voluptas?</p>
-    </div>
-
-    Utlizar <br> cuando se escirba poemas o direcciones  
-    <div class="salto-de-linea">
-        <p>
-            P. Sherman <br>
-            Calle Wallaby <br>
-            42 Sydney
-        </p>
-    </div>
-
-    <!-- Cambio de tema entre parrafos <hr>, usarlo cuando 
-    <div class="cambio de tema">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque impedit libero culpa quod inventore perspiciatis, quis quae recusandae praesentium sint. Placeat obcaecati eveniet, pariatur mollitia distinctio asperiores cum ut culpa.
-        </p>
-        <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ab temporibus non nesciunt ad error ex repellendus distinctio nobis sit eum, nihil eligendi molestiae? Recusandae velit esse magnam facere placeat.</p>
-    </div>
-
-    <!-- word break oportunnity <wbr> 
-    <div class="wbr">
-        <p>
-            Lorem ipsum dolor sit amet <wbr> consectetur adipisicing elit. Eum dolores officiis perferendis nemo totam non quia obcaecati quibusdam omnis tenetur sit quis, in modi minus deserunt voluptas nesciunt incidunt iusto.
-        </p>
-    </div>
-    <div class="subindice">
-        <p>
-            Lorem ipsum <sub> dolor</sub> sit amet consectetur, adipisicing elit. Consequuntur quae nostrum, est facere, eius molestiae dolore cupiditate, sed facilis optio ducimus inventore repudiandae odio consectetur blanditiis velit. Ducimus, iste alias?
-        </p>
-    </div>
-    <div class="sup">
-        <p>
-            Lorem ipsum <sup> dolor</sup> sit amet consectetur, adipisicing elit. Consequuntur quae nostrum, est facere, eius molestiae dolore cupiditate, sed facilis optio ducimus inventore repudiandae odio consectetur blanditiis velit. Ducimus, iste alias?
-        </p>
-    </div>
-    <div class="strong">
-        <p>
-            Lorem ipsum <strong> dolor sit amet consectetur, adipisicing elit.</strong> Consequuntur quae nostrum, est facere, eius molestiae dolore cupiditate, sed facilis optio ducimus inventore repudiandae odio consectetur blanditiis velit. Ducimus, iste alias?
-        </p>
-    </div>
-    <div class="enfasis">
-        <p>
-            Lorem ipsum <em> dolor sit amet consectetur, adipisicing elit</em>. Consequuntur quae nostrum, est facere, eius molestiae dolore cupiditate, sed facilis optio ducimus inventore repudiandae odio consectetur blanditiis velit. Ducimus, iste alias?
-        </p>
-    </div>
-    <div class="resaltado de texto">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Iusto mollitia maiores earum inventore tenetur cumque, dolorem, animi sed laudantium blanditiis 
-            aliquam praesentium aperiam, <mark>corporis temporibus sit quas aut</mark></p>
-    </div>
-    <div class="cita en linea">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Iusto mollitia maiores earum inventore tenetur cumque, dolorem, animi sed laudantium blanditiis 
-            aliquam praesentium aperiam<q cite="https://www.forbes.com.mx/forbes-life/tendencias-frases-emblematicas-de-albert-einstein/">
-                Cuando te mueres, no sabes que estás muerto, no sufres por ello, pero es duro para el resto. Lo mismo pasa cuando eres imbécil
-            </q></p>
-
-    <div class="definicion">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Iusto <dfn>mollitia</dfn> maiores earum inventore tenetur cumque, dolorem, animi sed laudantium blanditiis 
-        </p>
-    </div>
-
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Texto</title>
     <link rel="stylesheet" href="estilos1.css">
 </head>
 <body>
-    <!-- ENCABEZADOS -->
+
+    <header>
+        <nav>
+            <h1>Pagina web de html</h1>
+            <ul>
+                <li><a href="texto.html">TEXTO</a></li>
+                <li><a href="tablas.html">TABLAS</a></li>
+                <li><a href="imagenes.html">IMAGENES</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="encabezados">
-        <h1>Beetles</h1>
-        <h2>External morphology</h2>
-            <h3>Head</h3>
-                <h4>Mouthparts</h4>
-            <h3>Thorax</h3>
-                <h4>Prothorax</h4>
+        <h1>Texto</h1>
+        <h2>html</h2>
+        <h3>Practica</h3>
+        <h4>En</h4>
+        <h3>Sitio</h3>
+        <h4>Web</h4>
     </div> 
 
     <!-- PARRAFOS  -->
-     <div class="parrafos">
-        <p>Durante los últimos años el uso del teléfono móvil ha ido creciendo de manera exponencial, especialmente tras la eclosión de los dispositivos inteligentes. Estos se han convertido en nuestros compañeros de bolsillo (y de vida) que nos acompañan allá donde vayamos.
-        Sin embargo, un uso excesivo y no racional puede ocasionar problemas de dependencia, adicción y miedo.</p>
-        <p>La nomofobia (non-mobile-phone-phobia) puede entenderse como un miedo o ansiedad extrema de carácter irracional que se origina cuando la persona permanece durante un período de tiempo sin poder usar su teléfono móvil.
-        Bien por no tenerlo al alcance o bien por haber agotado la batería, plan de datos o imposibilidad de conectarse a una red wifi.</p>
+    <div class="parrafos">
+        <p>Durante los últimos años el uso del teléfono móvil ha ido creciendo de manera exponencial, especialmente tras la eclosión de los dispositivos inteligentes. Estos se han convertido en nuestros compañeros de bolsillo (y de vida) que nos acompañan allá donde vayamos. Sin embargo, un uso excesivo y no racional puede ocasionar problemas de dependencia, adicción y miedo.</p>
+        <p>La nomofobia (non-mobile-phone-phobia) puede entenderse como un miedo o ansiedad extrema de carácter irracional que se origina cuando la persona permanece durante un período de tiempo sin poder usar su teléfono móvil. Bien por no tenerlo al alcance o bien por haber agotado la batería, plan de datos o imposibilidad de conectarse a una red wifi.</p>
     </div> 
     
     <!-- SALTO DE LINEA -->
@@ -132,9 +51,9 @@
 
     <!-- CAMBIO DE TEMA -->
     <div class="cambio-de-tema">
-        <p>§1: La primera regla del club de la pelea es: No hablar del club de la pelea.</p>
+        <p>§1: En el mundo de los videojuegos, la primera regla es: No hablar del club de la pelea.</p>
         <hr>
-        <p>§2: La segunda regla del club de la pelea es: Siempre traer pastelitos.</p>
+        <p>§2: La segunda regla del club de la pelea es: Siempre traer pastelitos virtuales.</p>
     </div>
 
     <!-- WORD BREAK OPPORTUNITY -->
@@ -146,15 +65,15 @@
     </div> 
 
     <!-- SUPERINDICE -->
-     <div class="superindice">
-        <p>La ecuación mas famosa del mundo es: </p>
+    <div class="superindice">
+        <p>La ecuación más famosa del mundo de los videojuegos es: </p>
         <p>E = m.c <sup>2</sup></p>
     </div> 
 
     <!-- SUBINDICE -->
     <div class="subindice">
         <p>
-            El mejor amigo de todo desarrollador es: 
+            El mejor amigo de todo jugador de videojuegos es: 
             C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>,
             también conocido como...  
         </p>
@@ -163,145 +82,135 @@
     <!-- TEXTO MUY IMPORTANTE -->
     <div class="texto-muy-importante">
         <p>
-            ... la regla más importante, la regla que nunca puedes olvidar, 
+            ... la regla más importante en un juego, la regla que nunca puedes olvidar, 
             no importa cuánto llore, no importa cuánto suplique: 
-           <strong><strong>nunca le des comida después de la medianoche </strong></strong>
+           <strong><strong>nunca dejes tu equipo desprotegido </strong></strong>
         </p>
     </div> 
 
-    
     <!-- ENFASIS -->
-     <div class="enfasis">
+    <div class="enfasis">
         <p>
-            <em>A mi</em> me gustan tus pinturas
+            <em>A mí</em> me gustan tus estrategias.
         </p>
         <p>
-            A mi me gustan <em>tus</em> pinturas
+            A mí me gustan <em>tus</em> tácticas.
         </p>
     </div>         
 
     <!-- RESALTADO -->
     <div class="resaltado">
         <p>
-            Sócrates
-            se hacía el ignorante, es decir, aparentaba ser más tonto de lo
-            que era. Esto lo llamamos <mark>ironía socrática</mark>.
+            El personaje principal de un juego de rol se hacía el ignorante, es decir, aparentaba ser más tonto de lo
+            que era. Esto lo llamamos <mark>estrategia del héroe humilde</mark>.
         </p>
     </div> 
 
     <!-- CITA EN LINEA -->
     <div class="cita-en-linea">
-        <p>When Dave asks HAL to open the pod bay door, HAL answers: <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">I'm sorry, Dave. I'm afraid I can't do that.</q></p>
+        <p>Cuando el jugador pide a su compañero abrir una puerta, el compañero responde: <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">Lo siento, no puedo hacer eso.</q></p>
     </div> 
 
     <!-- CITA EN BLOQUE -->
     <figure>
         <blockquote cite="https://www.goodreads.com/quotes/117579-the-truth-may-be-puzzling-it-may-take-some-work">
             <p>
-                La verdad puede ser desconcertante. Puede tomar algo de trabajo para digerirse. 
+                En los videojuegos, la verdad puede ser desconcertante. Puede tomar algo de trabajo para digerirse. 
                 Puede ser contraintuitiva. Puede contradecir prejuicios profundamente arraigados. 
                 Puede que no sea acorde con lo que desesperadamente queremos que sea verdad. 
                 Pero nuestras preferencias no determinan la verdad.
             </p>
         </blockquote>
-        <figcaption>Carl Sagan, "<cite>Wonder and Skepticism</cite>"</figcaption>
+        <figcaption>John Carmack, "<cite>Reflexiones de un diseñador de juegos</cite>"</figcaption>
     </figure> 
+
     <!-- TÍTULO DE UN TRABAJO -->
     <div class="titulo-de-trabajo">
-        <p>Mi libro faborito es <cite>El cerebro de broca</cite> de Carl Sagan</p>
+        <p>Mi juego favorito es <cite>The Legend of Zelda: Breath of the Wild</cite> de Nintendo</p>
         <hr>
         <figure>
             <blockquote>
                 <p>
-                    Entre los habitantes de una aldea hay un, y solo un, barbero. Es un hombre 
-                    pulcro, respetado, que afeita a todos los hombres de la aldea que no se 
-                    afeitan a sí mismos, y solo a ellos. ¿Quién afeita al barbero?            
+                    En una tierra llena de monstruos y magia, un héroe debe enfrentarse a un destino predestinado. Pero, ¿qué sucede cuando el destino no es lo que parece?
                 </p>
                 <p>
-                    En principio parece razonable que el barbero se afeite a sí mismo. Pero en 
-                    ese caso viola el requerimiento de afeitar a todos los aldeanos que no se 
-                    afeitan a sí mismos. Y si no se afeita a sí mismo, viola el requerimiento 
-                    de afeitar a todos los aldeanos que no se afeitan a sí mismos.                     
+                    Este juego desafía las convenciones del género, invitando a los jugadores a explorar, experimentar y descubrir por sí mismos.
                 </p>
             </blockquote>
-        <figcaption>Nicholas Falleta, "<cite>Las trampas de la paradoja</cite>"</figcaption>
+        <figcaption>Miyamoto Shigeru, "<cite>Una nueva aventura espera</cite>"</figcaption>
         </figure>
     </div> 
 
     <!-- DEFINICIÓN DE TÉRMINOS -->
-
     <div class="definiciones">
         <p>
-            Un <dfn>validador</dfn> es un programa que revisa
-            errores de sintaxis en el código  o documentos.
+            Un <dfn>mod</dfn> es una modificación o extensión creada por los jugadores para alterar o agregar contenido a un videojuego existente.
         </p>
     </div> 
 
     <!-- ABREVIATURAS -->
     <div class="abreviaturas">
         <p>
-            Puedes usar <abbr title="Cascading Style Sheets">CSS</abbr> 
-            para darle estilo a tu <abbr title="HyperText Markup Language">HTML</abbr>.
+            Puedes usar <abbr title="Character Level">CL</abbr> 
+            para medir el progreso de tu personaje en un juego de rol.
         </p>
     </div> 
 
     <!-- TEXTO PEQUEÑO -->
     <div class="texto">
-        <p>MDN Web Docs es una plataforma de aprendizaje de tecnologías web y el software 
-            que impulsa la web.</p>
+        <p>Nintendo Switch es una plataforma de juegos versátil que permite jugar en casa o en movimiento.</p>
         <hr>
-        <p><small>El contenido está disponible bajo una licencia Creative Commons.</small></p>
+        <p><small>La información sobre los juegos está sujeta a cambios y actualizaciones sin previo aviso.</small></p>
     </div> 
 
-    <!-- TEXTO AÑADIDO (El señor de los anillos)-->
+    <!-- TEXTO AÑADIDO (Super Mario Bros)-->
     <div class="texto-agregado">
-        <p>“LLegas tarde!”</p>
-        <del><p>“Me disculpo por la demora.”</p></del>
-        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“Un mago nunca llega tarde…”</p></ins>
+        <p>“¡Espera un minuto!”</p>
+        <del><p>“¡Voy a ganar!”</p></del>
+        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“¡Es mi turno de jugar!”</p></ins>
     </div> 
 
     <!-- TEXTO ELIMINADO -->
     <div class="texto-eliminado">
-        <p>“LLegas tarde!”</p>
-        <del><p>“Me disculpo por la demora.”</p></del>
-        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“Un mago nunca llega tarde…”</p></ins>
+        <p>“¡Adelante!”</p>
+        <del><p>“¡Este es mi juego!”</p></del>
+        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“¡Déjame intentarlo!”</p></ins>
     </div> 
 
     <!-- TACHAR TEXTO -->
     <div class="tachar-texto">
-        <p><s>Habrá algunas entradas disponibles esta noche.</s></p>
-        <p>¡AGOTADO!</p>
+        <p><s>La próxima actualización incluirá nuevas características emocionantes.</s></p>
+        <p>¡PRÓXIMAMENTE!</p>
     </div>
     <hr>
     <div class="tachar-texto">
-        <p>¡Compra nuestro té helado y limonada!</p>
-        <p><s>Precio de venta recomendado: $3,99 por botella</s></p>
-        <p><strong>¡Ahora a la venta por solo $2.99 la botella!</strong></p>
+        <p>¡Obtén nuestros paquetes de juegos con descuento!</p>
+        <p><s>Precio de venta recomendado: $59.99 por juego</s></p>
+        <p><strong>¡Ahora a la venta por solo $39.99 por juego!</strong></p>
     </div> 
 
     <!-- CODIGO -->
     <div class="codigo">
-        <p>El método <code>push()</code> agrega uno o más elementos al final de una matriz y devuelve la nueva longitud de la matriz.</p>
+        <p>El método <code>jump()</code> permite que el personaje salte sobre obstáculos en el juego.</p>
     </div>
     <hr>
     <div class="codigo">
         <pre>
-            <code class="language-pascal">
-                var i: Integer;
-                begin
-                    i := 1;
-                end.
+            <code class="language-javascript">
+                function attackEnemy() {
+                    // Código para atacar al enemigo
+                }
             </code>
         </pre>
     </div> 
 
     <!-- SALIDA DE COMPUTADORA -->
     <div class="salida-computadora">
-        <p>Estaba tratando de iniciar mi computadora, pero recibí este divertido mensaje:</p>
+        <p>Estaba tratando de iniciar mi juego, pero recibí este divertido mensaje:</p>
         <p>
             <samp>
-                Teclado no encontrado <br>
-                Presione F1 para continuar
+                Error: No se pudo cargar el archivo de guardado <br>
+                Presione A para intentarlo de nuevo
             </samp>
         </p>
     </div> 
@@ -309,8 +218,8 @@
     <!-- ENTRADA DE USUARIO -->
     <div class="entrada-usuario">
         <p>
-            Para copiar un texto, selecciónelo  y luego presione 
-            <kbd><kbd>Ctrl</kbd>+<kbd>F5</kbd></kbd>.
+            Para guardar tu progreso en el juego, selecciona la opción "Guardar" en el menú principal o presiona 
+            <kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>.
         </p>
     </div> 
 
@@ -318,7 +227,7 @@
     <div class="conservar-formato">
         <pre>
             ___________________________
-             I'm an expert in my field.
+             ¡Prepárate para la batalla!
             ---------------------------
                 \   ^__^
                  \  (oo)\_______
@@ -329,19 +238,20 @@
     </div>
     <hr>
     <div class="conservar-formato">
-        <p>Usar CSS para cambiar el color de la fuente es fácil.</p>
+        <p>Usar CSS para cambiar el estilo de los personajes es fácil.</p>
         <pre>
-        body {
+        .enemy {
             color: red;
+            font-size: 24px;
         }
         </pre>
     </div> 
 
     <!-- INFORMACION DE CONTACTO -->
     <div class="contacto">
-        <p>Contacte al autor de esta página:</p>
+        <p>Contacta al desarrollador de este juego:</p>
         <address>
-            <a href="mailto:jim@rock.com">fbeltran@ucb.edu.bo</a><br>
+            <a href="mailto:arturo.veliz@ucb.edu.bo">arturo.veliz@ucb.edu.bo</a><br>
             <a href="tel:+13115552368">(311) 555-2368</a>
         </address>
     </div> 
@@ -349,9 +259,8 @@
     <!-- CARACTERES ESPECIALES -->
     <div class="caracteres-especiales">
         <p>
-            El elemento &lt;html&gt; representa la raíz de un documento HTML, 
-            por lo que también se denomina elemento raíz. Todos los demás 
-            elementos deben ser descendientes de este elemento.
+            El elemento &lt;div&gt; representa una sección genérica de un documento, 
+            útil para agrupar otros elementos con fines de estilo o de comportamiento.
         </p>
     </div>
     <div class="caracteres-especiales">
