--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conocimientos </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <nav>
             <h1>Pagina web de html</h1>
@@ -16,6 +18,44 @@
             </ul>
         </nav>
     </header>
+    <div class="encabezados">
+        <h1>Texto html practica</h1>
+        
+    </div> 
 
+
+    <h2>Cuidado de <strong>Perros</strong></h2>
+
+    <p>Los perros son <mark>maravillosas mascotas</mark> que necesitan cuidados especiales para mantenerse saludables y felices. Aquí hay algunos consejos para garantizar el bienestar de tu amigo canino:</p>
+
+    <h3>1. Alimentación adecuada</h3>
+    <p>Proporciona a tu perro una dieta balanceada y adecuada a su tamaño, raza y edad. Consulta con tu <cite>veterinario</cite> para determinar las porciones y los tipos de alimentos más adecuados.</p>
+
+    <h3>2. Ejercicio regular</h3>
+    <p>Los perros necesitan ejercicio diario para mantenerse en forma y estimular su mente. Paseos regulares, juegos al aire libre y actividades como el <strong>agility</strong> pueden ayudar a mantener a tu perro feliz y saludable.</p>
+
+    <h3>3. Atención veterinaria</h3>
+    <p>Lleva a tu perro al <cite>veterinario</cite> para chequeos regulares y vacunas. También es importante estar atento a cualquier <del>señal de enfermedad</del> o malestar y actuar rápidamente en caso de necesidad.</p>
+
+    <h3>4. Higiene</h3>
+    <p>Mantén a tu perro limpio bañándolo regularmente con productos adecuados para su piel y pelaje. También recuerda cepillar su pelaje para prevenir nudos y eliminar el pelo muerto.</p>
+
+    <h3>5. Entrenamiento y socialización</h3>
+    <p>Entrena a tu perro para que obedezca órdenes básicas y se comporte adecuadamente en diferentes situaciones. La <mark>socialización</mark> con otros perros y personas desde temprana edad es clave para evitar problemas de comportamiento.</p>
+
+    <h3>6. Amor y atención</h3>
+    <p>Brinda a tu perro mucho amor, atención y compañía. Los perros son animales sociales que necesitan el afecto de sus dueños para sentirse seguros y felices.</p>
+
+    <p>Siguiendo estos consejos, podrás garantizar una vida larga, saludable y feliz para tu fiel compañero canino.</p>
+
+    <footer>
+        <hr>
+        <small>Pagina html - &copy;2024 Arturo Veliz</small>
+        <p>Contacta al desarrollador:</p>
+        <address>
+            <a href="mailto:arturo.veliz@ucb.edu.bo">arturo.veliz@ucb.edu.bo</a><br>
+            <a href="tel:+13115552368">(311) 555-2368</a>
+        </address>
+    </footer>
 </body>
 </html>
