--- a/tablas.html
+++ b/tablas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=tab, initial-scale=1.0">
     <title>Tablas</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
         <nav>
             <h1>Pagina web de html</h1>
             <ul>
-                <li><a href="texto.html">TEXTO</a></li>
+                <li><a href="index.html">TEXTO</a></li>
                 <li><a href="tablas.html">TABLAS</a></li>
                 <li><a href="imagenes.html">IMAGENES</a></li>
             </ul>
@@ -249,5 +250,16 @@
     </tr>
   </tbody>
 </table>
+
+<footer>
+  <hr>
+  <small>Pagina html - &copy;2024 Arturo Veliz</small>
+  <p>Contacta al desarrollador:</p>
+  <address>
+      <a href="mailto:arturo.veliz@ucb.edu.bo">arturo.veliz@ucb.edu.bo</a><br>
+      <a href="tel:+13115552368">(311) 555-2368</a>
+  </address>
+</footer>
 </body>
+
 </html>
