--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>Pagina web de html</h1>
             <ul>
-                <li><a href="texto.html">TEXTO</a></li>
+                <li><a href="index.html">TEXTO</a></li>
                 <li><a href="tablas.html">TABLAS</a></li>
                 <li><a href="imagenes.html">IMAGENES</a></li>
             </ul>
